<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ex.kode.kodeex3.InputTriActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected"
        android:textAlignment="center"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/fig_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/tri"
        android:textSize="25dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/side_1"
        android:textSize="15dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/side_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:tooltipText="@string/side_1"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/side_2"
        android:textSize="15dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/side_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:tooltipText="@string/side_2"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/side_3"
        android:textSize="15dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/side_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:tooltipText="@string/side_3"
        android:inputType="number"/>

    <CheckBox
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_check"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/draw"
        android:text="@string/draw"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:gravity="bottom"/>

    <Button
        android:id="@+id/back"
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textAlignment="center"
        android:gravity="bottom"/>

</LinearLayout>
