<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ex.kode.kodeex3.FinishActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected"
        android:textAlignment="center"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/fig_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/base_info"
        android:textSize="15dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/fig_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/calc_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/calc_info"
        android:textSize="15dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/calc_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/back"
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textAlignment="center"
        android:gravity="bottom"/>

</LinearLayout>
